bugfix: docker changes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.13.9",
-    "playwright": "^1.50.1",
+    "playwright-chromium": "^1.50.1",
     "typescript": "^5.8.2"
   },
   "dependencies": {
